--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "map": false
   },
   "scripts": {
+    "dev": "sass --sourcemap=none --no-cache --watch css/wedding.scss:css/dist/wedding.min.css --style compressed",
     "watch": "node-sass sass/ -o ./ --source-map true --output-style expanded --indent-type tab --indent-width 1 -w",
     "compile:css": "node-sass sass/ -o ./ && stylelint '*.css' --fix || true && stylelint '*.css' --fix",
     "compile:rtl": "rtlcss style.css style-rtl.css",
